== 0.5.2

== 0.5.1

* Enhancements
  * Preceptor Other Support document now a file (docx, doc, pdf) upload
  * Administrators can export selected preceptor information to a CSV file
  * Preceptor page lists applicants who have the preceptor set as their primary or secondary preceptor
  * Deleting preceptors or applicants sets the email field to blank so that the email can be potentially reused
  * Applicant help buttons on applicant pages that create help request emails for the Training Grant Administrator

* Refactoring
  * Unused CV variable has been removed, (previously replaced by curriculum_vitae)

== 0.5.0

* Enhancements
  * Applicant updates
    * Multiple degrees can be added to applicants
      * Degree Type, Institution, Year, Advisor, Thesis, and Concentration / Major
    * Previous Institutions has been merged with Degrees Earned
    * Citizenship status is simplified
    * Research Interests are now required
  * Administrator updates
    * Notify applicants and trainees to fill out annual information
    * Modify submission date on applicant page
    * View different time ranges for reports on dashboard
    * Export selected applicant information to a CSV file
    * Export annual information to CSV
    * Notify enrolled trainees to complete exit interviews
  * Preceptor updates
    * Preferred preceptors are notified by email applicants submit their applications

== 0.4.2

* Enhancements
  * Updated to Rails 3.2.8
    * Removed deprecated use of update_attribute for Rails 4.0 compatibility
  * Email Changes:
    * Default application name is now added to the from: field for emails
    * Email subjects no longer include the application name
  * About page reformatted to include links to github and contact information

* Refactoring
  * Consistent sorting and display of model counts used across all objects, (applicants, preceptors, users)

* Testing
  * Use ActionDispatch for Integration tests instead of ActionController

* Bug Fix