@@ -11,64 +11,16 @@
       <th style="white-space:nowrap"><%== sort_field_helper(@order, 'applicants.offered', 'Offered', 'applicants_search') %></th>
       <th style="white-space:nowrap"><%== sort_field_helper(@order, 'applicants.accepted', 'Accepted', 'applicants_search') %></th>
       <th style="white-space:nowrap"><%== sort_field_helper(@order, 'applicants.enrolled', 'Enrolled', 'applicants_search') %></th>
-<% if false %>
-      <th>Advisor</th>
-<% end %>
       <th>CV number</th>
-<% if false %>
-      <th>Concentration / Major</th>
-      <th>Current institution</th>
-      <th>Degree sought</th>
-      <th>Department / Program</th>
-<% end %>
       <th>Disabled</th>
       <th>Disadvantaged</th>
-<% if false %>
-      <th>Expected year</th>
-      <th>Preferred preceptor</th>
-      <th>Primary preceptor</th>
-      <th>Secondary preceptor</th>
-<% end %>
       <th>TGE</th>
-<% if false %>
-      <th>Thesis</th>
-<% end %>
       <th>URM</th>
-<% if false %>
-      <th>Degree type</th>
-      <th>Degrees earned</th>
-      <th>Notes</th>
-      <th>Residency</th>
-      <th>Training period start date</th>
-      <th>Training period end date</th>
-<% end %>
       <th style="white-space:nowrap"><%== sort_field_helper(@order, 'applicants.status', 'Status', 'applicants_search') %></th>
-<% if false %>
-      <th>Current Position</th>
-      <th>Address1</th>
-      <th>Address2</th>
-      <th>City</th>
-      <th>State</th>
-      <th>Country</th>
-      <th>Zip code</th>
-      <th>Coursework comp</th>
-      <th>Phone</th>
-      <th>Presentations</th>
-      <th>Pubs not prev rep</th>
-      <th>Research description</th>
-      <th>Source of support</th>
-<% end %>
       <th>Supported by TG</th>
-<% if false %>
-      <th>Training grant years</th>
-      <th>Research project title</th>
-<% end %>
       <th>Trainee code</th>
-<% if false %>
-      <th>Desired start date</th>
-      <th>Marital status</th>
-<% end %>
       <th style="white-space:nowrap"><%== sort_field_helper(@order, 'applicants.submitted_at', 'Submitted', 'applicants_search') %></th>
+      <th style="white-space:nowrap"><%== sort_field_helper(@order, 'applicants.current_sign_in_at', 'Recent Activity', 'applicants_search') %></th>
       <th>Actions</th>
     </tr>
   </thead>
@@ -79,69 +31,21 @@
         <td><%= link_to applicant.name, applicant %></td>
         <td><%= applicant.email %></td>
         <td><%= applicant.applicant_type %></td>
-        <td style="text-align:center"><%= simple_check applicant.reviewed %></td>
-        <td><%= applicant.review_date %></td>
-        <td style="text-align:center"><%= simple_check applicant.offered %></td>
-        <td style="text-align:center"><%= simple_check applicant.accepted %></td>
-        <td style="text-align:center"><%= simple_check applicant.enrolled %></td>
-<% if false %>
-        <td><%= applicant.advisor %></td>
-<% end %>
-        <td><%= applicant.cv_number %></td>
-<% if false %>
-        <td><%= applicant.concentration_major %></td>
-        <td><%= applicant.current_institution %></td>
-        <td><%= applicant.degree_sought %></td>
-        <td><%= applicant.department_program %></td>
-<% end %>
-        <td style="text-align:center"><%= simple_check applicant.disabled %></td>
-        <td style="text-align:center"><%= simple_check applicant.disadvantaged %></td>
-<% if false %>
-        <td><%= applicant.expected_year %></td>
-        <td><%= link_to applicant.preferred_preceptor.name, applicant.preferred_preceptor if applicant.preferred_preceptor %></td>
-        <td><%= link_to applicant.primary_preceptor.name, applicant.primary_preceptor if applicant.primary_preceptor %></td>
-        <td><%= link_to applicant.secondary_preceptor.name, applicant.secondary_preceptor if applicant.secondary_preceptor %></td>
-<% end %>
-        <td style="text-align:center"><%= simple_check applicant.tge %></td>
-<% if false %>
-        <td><%= applicant.thesis %></td>
-<% end %>
-        <td style="text-align:center"><%= simple_check applicant.urm %></td>
-<% if false %>
-        <td><%= applicant.degree_type %></td>
-        <td><%= applicant.degrees_earned %></td>
-        <td><%= applicant.notes %></td>
-        <td><%= applicant.residency %></td>
-        <td><%= applicant.training_period_start_date %></td>
-        <td><%= applicant.training_period_end_date %></td>
-<% end %>
-        <td><%= applicant.status %></td>
-<% if false %>
-        <td><%= applicant.current_position %></td>
-        <td><%= applicant.address1 %></td>
-        <td><%= applicant.address2 %></td>
-        <td><%= applicant.city %></td>
-        <td><%= applicant.state %></td>
-        <td><%= applicant.country %></td>
-        <td><%= applicant.zip_code %></td>
-        <td><%= applicant.coursework_completed %></td>
-        <td><%= applicant.phone %></td>
-        <td><%= applicant.presentations %></td>
-        <td><%= applicant.pubs_not_prev_rep %></td>
-        <td><%= applicant.research_description %></td>
-        <td><%= applicant.source_of_support %></td>
-<% end %>
-        <td style="text-align:center"><%= simple_check applicant.supported_by_tg %></td>
-<% if false %>
-        <td><%= applicant.training_grant_years %></td>
-        <td><%= applicant.research_project_title %></td>
-<% end %>
+        <td style="text-align:center" rel="tooltip" title="Reviewed"><%= simple_check applicant.reviewed %></td>
+        <td rel="tooltip" title="Review date"><%= applicant.review_date %></td>
+        <td style="text-align:center" rel="tooltip" title="Offered"><%= simple_check applicant.offered %></td>
+        <td style="text-align:center" rel="tooltip" title="Accepted"><%= simple_check applicant.accepted %></td>
+        <td style="text-align:center" rel="tooltip" title="Enrolled"><%= simple_check applicant.enrolled %></td>
+        <td rel="tooltip" title="CV Number"><%= applicant.cv_number %></td>
+        <td style="text-align:center" rel="tooltip" title="Disabled"><%= simple_check applicant.disabled %></td>
+        <td style="text-align:center" rel="tooltip" title="Disadvantaged"><%= simple_check applicant.disadvantaged %></td>
+        <td style="text-align:center" rel="tooltip" title="TGE"><%= simple_check applicant.tge %></td>
+        <td style="text-align:center" rel="tooltip" title="URM"><%= simple_check applicant.urm %></td>
+        <td rel="tooltip" title="Status"><%= applicant.status %></td>
+        <td style="text-align:center" rel="tooltip" title="Supported"><%= simple_check applicant.supported_by_tg %></td>
         <td><%= applicant.trainee_code %></td>
-<% if false %>
-        <td><%= applicant.desired_start_date %></td>
-        <td><%= applicant.marital_status %></td>
-<% end %>
-        <td><%= simple_time applicant.submitted_at %></td>
+        <td rel="tooltip" title="Submitted"><%= simple_time applicant.submitted_at %></td>
+        <td rel="tooltip" title="Recent"><%= recent_activity(applicant.current_sign_in_at) %></td>
         <td>
           <%= link_to 'Edit', edit_applicant_path(applicant), class: 'btn btn-mini' %>
           <%= link_to 'Delete', applicant, method: :delete, class: 'btn btn-mini btn-danger', data: { confirm: "Are you sure you want to delete Applicant #{applicant.name}?" } %>
